[package]
name = "h3-axum"
version = "0.1.0"
edition = "2024"
authors = [
    "iadev09 <166385752+iadev09@users.noreply.github.com>",
    "with Claude Code (Anthropic) <noreply@anthropic.com>"
]
description = "Transport your Axum router over HTTP/3. Use your existing handlers with QUIC."
license = "MIT OR Apache-2.0"
repository = "https://github.com/iadev09/h3-axum"
keywords = ["http3", "quic", "axum", "quinn", "h3"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
bytes = "1.10.1"
http = "1"
tower = { version = "0.5.2", features = ["util"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
http-body-util = "0.1"
axum = "0.8"

[dev-dependencies]
quinn = "0.11"
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rcgen = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http-body = "1"
http-body-util = "0.1"
